# TaskCask

./: .flake8  README.md  cmd.sh  constraints.txt  pyproject.toml  requirements-dev.txt
docs/: definitions.md
examples/config/: config.main.tcask  config.main.yaml.jinja2  config.tcask  config.toml  config.yaml.jinja2
examples/config/environments/: ssh_raspberrypi.jinja2  ssh_raspberrypi.yaml.jinja2
examples/python/: py_module.py
examples/task_templates/: python.tcask  system_commands.tcask  system_commands.yaml  system_commands.yaml.jinja2
examples/task_templates/toml/: python.toml  system_commands.toml
examples/task_templates/yaml/: system_commands.yaml
src/taskcask/: app.py  autoloader.py  task.py  typedefs.py
src/taskcask/cli/: main.py
src/taskcask/cli/commands/: config.py  list.py  run.py
src/taskcask/cli/commands/decorators/: taskcask_command.py
src/taskcask/config/: builder.py  compiler.py  factory.py  registry.py  tcask_file_loader.py  types.py
src/taskcask/environments/: class_factory.py  environment.py
src/taskcask/events/: listeners.py  types.py
src/taskcask/executors/: class_loader.py  executor.py  factory.py  registry.py
src/taskcask/operations/: run.py
src/taskcask/stdlib/: autoloader.py
src/taskcask/stdlib/config/: builder.py  types.py
src/taskcask/stdlib/environments/: class_loader.py  enviromnent.py
src/taskcask/stdlib/events/: listeners.py
src/taskcask/stdlib/executors/: class_loader.py  python.py  system_command.py
src/taskcask/stdlib/task_templates/: class_loader.py  python.py  system_command.py
src/taskcask/stdlib/task_templates/definition_loaders/: dir_toml_loader.py  dir_yaml_loader.py
src/taskcask/task_templates/: class_factory.py  class_loader.py  factory.py  loader.py  system_command.py  task_template.py
src/taskcask/task_templates/definitions/: factory.py  loader.py
src/taskcask/utils/: dict.py  jinja.py  reflection.py  sys.py
src/taskcask/utils/algorithms/: sort.py
tests/taskcask/config/: test_compiler.py
tests/taskcask/events/: test_listeners.py
tests/taskcask/stdlib/config/: test_builder.py
tests/taskcask/utils/: test_dict.py  test_sys.py
